{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 68,
  "lineage": "0ade2381-f981-7a8c-1ef6-20912dad4caa",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:security-group/sg-0f0947cff5eff0a0a",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0f0947cff5eff0a0a",
            "ingress": [],
            "name": "ATC-Prod-Cluster-cluster-2024123018314009500000000b",
            "name_prefix": "ATC-Prod-Cluster-cluster-",
            "owner_id": "905418316565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ATC-Prod-Cluster",
              "Name": "ATC-Prod-Cluster-cluster"
            },
            "tags_all": {
              "Example": "ATC-Prod-Cluster",
              "Name": "ATC-Prod-Cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:security-group/sg-0dc95f8d84625bc2e",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0dc95f8d84625bc2e",
            "ingress": [],
            "name": "ATC-Prod-Cluster-node-2024123018313842880000000a",
            "name_prefix": "ATC-Prod-Cluster-node-",
            "owner_id": "905418316565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "ATC-Prod-Cluster",
              "Name": "ATC-Prod-Cluster-node",
              "kubernetes.io/cluster/ATC-Prod-Cluster": "owned"
            },
            "tags_all": {
              "Example": "ATC-Prod-Cluster",
              "Name": "ATC-Prod-Cluster-node",
              "kubernetes.io/cluster/ATC-Prod-Cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1247712697",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f0947cff5eff0a0a",
            "security_group_rule_id": "sgr-0b01fb3112caaaedf",
            "self": false,
            "source_security_group_id": "sg-0dc95f8d84625bc2e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2096044866",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0dc95f8d84625bc2e",
            "security_group_rule_id": "sgr-062f5d6ec678c98d9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-225198280",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc95f8d84625bc2e",
            "security_group_rule_id": "sgr-03c600d59160fa09b",
            "self": false,
            "source_security_group_id": "sg-0f0947cff5eff0a0a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1349918568",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc95f8d84625bc2e",
            "security_group_rule_id": "sgr-000089ed11f0d9113",
            "self": false,
            "source_security_group_id": "sg-0f0947cff5eff0a0a",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2570352894",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc95f8d84625bc2e",
            "security_group_rule_id": "sgr-08208125afa28bcbd",
            "self": false,
            "source_security_group_id": "sg-0f0947cff5eff0a0a",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2322089183",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc95f8d84625bc2e",
            "security_group_rule_id": "sgr-0a11f75decf8400ee",
            "self": false,
            "source_security_group_id": "sg-0f0947cff5eff0a0a",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4006180628",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc95f8d84625bc2e",
            "security_group_rule_id": "sgr-0a4447206353cb775",
            "self": false,
            "source_security_group_id": "sg-0f0947cff5eff0a0a",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3200476528",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc95f8d84625bc2e",
            "security_group_rule_id": "sgr-04efe7ab2b85bd02d",
            "self": false,
            "source_security_group_id": "sg-0f0947cff5eff0a0a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-238957970",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc95f8d84625bc2e",
            "security_group_rule_id": "sgr-06e8436c175b05864",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-288030327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dc95f8d84625bc2e",
            "security_group_rule_id": "sgr-00e708a10302ea665",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3044367768",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0dc95f8d84625bc2e",
            "security_group_rule_id": "sgr-074cdc3fd9f0c35c9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:network-acl/acl-0a7a181c5646bc39d",
            "default_network_acl_id": "acl-0a7a181c5646bc39d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a7a181c5646bc39d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "905418316565",
            "subnet_ids": [
              "subnet-07d7ac4f5a13c4001",
              "subnet-0915afcfd65db8504",
              "subnet-0b25c7379a4fc75ab",
              "subnet-0caf95ff9c156898a",
              "subnet-0cc3d99d446a0b400",
              "subnet-0ddfe7021e4de643b"
            ],
            "tags": {
              "Name": "ATC-Prod-Cluster-default"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-default"
            },
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:route-table/rtb-0bc77442954f95f17",
            "default_route_table_id": "rtb-0bc77442954f95f17",
            "id": "rtb-0bc77442954f95f17",
            "owner_id": "905418316565",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "ATC-Prod-Cluster-default"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:security-group/sg-0d9a72b09b8f777af",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d9a72b09b8f777af",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "905418316565",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ATC-Prod-Cluster-default"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-default"
            },
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0effbe4e0ab776844",
            "arn": "arn:aws:ec2:us-east-1:905418316565:elastic-ip/eipalloc-0effbe4e0ab776844",
            "domain": "vpc",
            "id": "eipalloc-0effbe4e0ab776844",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-91-2-55.compute-1.amazonaws.com",
            "public_ip": "54.91.2.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ATC-Prod-Cluster-us-east-1a"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-us-east-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d7042b05f349e6b",
            "arn": "arn:aws:ec2:us-east-1:905418316565:elastic-ip/eipalloc-06d7042b05f349e6b",
            "domain": "vpc",
            "id": "eipalloc-06d7042b05f349e6b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-84-70-165.compute-1.amazonaws.com",
            "public_ip": "98.84.70.165",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ATC-Prod-Cluster-us-east-1b"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-us-east-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:internet-gateway/igw-0cc8be7a1aa9e9092",
            "id": "igw-0cc8be7a1aa9e9092",
            "owner_id": "905418316565",
            "tags": {
              "Name": "ATC-Prod-Cluster"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster"
            },
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0effbe4e0ab776844",
            "association_id": "eipassoc-0a2a91d6381646f87",
            "connectivity_type": "public",
            "id": "nat-064751acd922c3e0f",
            "network_interface_id": "eni-0568c25b4a6ee027b",
            "private_ip": "10.123.1.113",
            "public_ip": "54.91.2.55",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07d7ac4f5a13c4001",
            "tags": {
              "Name": "ATC-Prod-Cluster-us-east-1a"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d7042b05f349e6b",
            "association_id": "eipassoc-0f91b3b5771bf7448",
            "connectivity_type": "public",
            "id": "nat-0c590ddb718c66cab",
            "network_interface_id": "eni-091264f78384cef75",
            "private_ip": "10.123.2.128",
            "public_ip": "98.84.70.165",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0915afcfd65db8504",
            "tags": {
              "Name": "ATC-Prod-Cluster-us-east-1b"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-028ca101f7ac2a19f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-064751acd922c3e0f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028ca101f7ac2a19f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09b9bb946b69849cc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c590ddb718c66cab",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b9bb946b69849cc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cc8be7a1aa9e9092",
            "id": "r-rtb-058aa6de5e8fb288e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-058aa6de5e8fb288e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:route-table/rtb-082614b39e3b50b70",
            "id": "rtb-082614b39e3b50b70",
            "owner_id": "905418316565",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ATC-Prod-Cluster-intra"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:route-table/rtb-028ca101f7ac2a19f",
            "id": "rtb-028ca101f7ac2a19f",
            "owner_id": "905418316565",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ATC-Prod-Cluster-private-us-east-1a"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:route-table/rtb-09b9bb946b69849cc",
            "id": "rtb-09b9bb946b69849cc",
            "owner_id": "905418316565",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ATC-Prod-Cluster-private-us-east-1b"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:route-table/rtb-058aa6de5e8fb288e",
            "id": "rtb-058aa6de5e8fb288e",
            "owner_id": "905418316565",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "ATC-Prod-Cluster-public"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0665f82e6d8949be6",
            "route_table_id": "rtb-082614b39e3b50b70",
            "subnet_id": "subnet-0b25c7379a4fc75ab"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093b7cfbc4f614b50",
            "route_table_id": "rtb-082614b39e3b50b70",
            "subnet_id": "subnet-0ddfe7021e4de643b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e96a047294ba876b",
            "route_table_id": "rtb-028ca101f7ac2a19f",
            "subnet_id": "subnet-0cc3d99d446a0b400"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e9d104627668e4c",
            "route_table_id": "rtb-09b9bb946b69849cc",
            "subnet_id": "subnet-0caf95ff9c156898a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0ca5e93098c52f0",
            "route_table_id": "rtb-058aa6de5e8fb288e",
            "subnet_id": "subnet-07d7ac4f5a13c4001"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff5922a99516c204",
            "route_table_id": "rtb-058aa6de5e8fb288e",
            "subnet_id": "subnet-0915afcfd65db8504"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:subnet/subnet-0b25c7379a4fc75ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.123.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b25c7379a4fc75ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418316565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ATC-Prod-Cluster-intra-us-east-1a"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-intra-us-east-1a"
            },
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:subnet/subnet-0ddfe7021e4de643b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddfe7021e4de643b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418316565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ATC-Prod-Cluster-intra-us-east-1b"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-intra-us-east-1b"
            },
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:subnet/subnet-0cc3d99d446a0b400",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.123.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc3d99d446a0b400",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418316565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ATC-Prod-Cluster-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-private-us-east-1a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:subnet/subnet-0caf95ff9c156898a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caf95ff9c156898a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418316565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ATC-Prod-Cluster-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-private-us-east-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:subnet/subnet-07d7ac4f5a13c4001",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d7ac4f5a13c4001",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418316565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ATC-Prod-Cluster-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-public-us-east-1a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:subnet/subnet-0915afcfd65db8504",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0915afcfd65db8504",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418316565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ATC-Prod-Cluster-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster-public-us-east-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0475271e5bc312715"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418316565:vpc/vpc-0475271e5bc312715",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0a7a181c5646bc39d",
            "default_route_table_id": "rtb-0bc77442954f95f17",
            "default_security_group_id": "sg-0d9a72b09b8f777af",
            "dhcp_options_id": "dopt-0aa1cda09d6a64737",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0475271e5bc312715",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc77442954f95f17",
            "owner_id": "905418316565",
            "tags": {
              "Name": "ATC-Prod-Cluster"
            },
            "tags_all": {
              "Name": "ATC-Prod-Cluster"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}